force-app/main/default/objects/Suburbs_Delivered__c/Suburbs_Delivered__c.object-meta.xml
<CustomObject>
    <label>Suburbs Delivered</label>
    <nameField>
        <displayFormat>SUD-{00000}</displayFormat>
        <label>Suburbs Delivered</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Suburbs Delivered</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>