force-app/main/default/objects/Suburbs_Delivered__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Suburbs Delivered</relationshipLabel>
    <relationshipName>Suburbs_Delivered</relationshipName>
    <type>Lookup</type>
</CustomField>