force-app/main/default/objects/Suburbs_Delivered__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select Organisation first</inlineHelpText>
    <label>Suburb</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Suburb__c.Organisation__c</field>
            <operation>equals</operation>
            <valueField>$Source.Organization__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Suburb__c</referenceTo>
    <relationshipLabel>Suburbs Delivered</relationshipLabel>
    <relationshipName>Suburbs_Delivered</relationshipName>
    <type>Lookup</type>
</CustomField>