force-app/main/default/objects/Suburbs_Delivered__c/fields/Unique__c.field-meta.xml
<CustomField>
    <fullName>Unique__c</fullName>
    <label>Unique</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>